chronicle-domain-test/src/snapshots/chronicle_domain_test__test__agent_can_be_created.snap
---
source: chronicle-domain-test/src/test.rs
assertion_line: 379
expression: create
---
[data.agent]
context = 'http://blockchaintp.com/chronicle/ns#agent:bobross'
