chronicle-domain-test/src/snapshots/chronicle_domain_test__test__agent_delegation-2.snap
---
source: chronicle-domain-test/src/test.rs
assertion_line: 176
expression: derived.data
---
{
  "agentById": {
    "id": "http://blockchaintp.com/chronicle/ns#agent:responsible",
    "name": "responsible",
    "actedOnBehalfOf": [
      {
        "agent": {
          "id": "http://blockchaintp.com/chronicle/ns#agent:delegate"
        },
        "role": "DELEGATE"
      }
    ]
  }
}
