chronicle-domain-test/src/snapshots/chronicle_domain_test__test__agent_delegation.snap
---
source: chronicle-domain-test/src/test.rs
assertion_line: 150
expression: created
---
[data.actedOnBehalfOf]
context = 'http://blockchaintp.com/chronicle/ns#agent:responsible'
