chronicle-domain-test/src/snapshots/chronicle_domain_test__test__primary_source.snap
---
source: chronicle-domain-test/src/test.rs
assertion_line: 238
expression: created
---
[data.hadPrimarySource]
context = 'http://blockchaintp.com/chronicle/ns#entity:generated'
