chronicle-domain-test/src/snapshots/chronicle_domain_test__test__query_agents_by_cursor-2.snap
---
source: chronicle-domain-test/src/test.rs
assertion_line: 626
expression: middle_cursor
---
{
  "data": {
    "agentsByType": {
      "pageInfo": {
        "hasPreviousPage": true,
        "hasNextPage": true,
        "startCursor": "4",
        "endCursor": "23"
      },
      "edges": [
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross12",
            "name": "bobross12",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "4"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross13",
            "name": "bobross13",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "5"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross14",
            "name": "bobross14",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "6"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross15",
            "name": "bobross15",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "7"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross16",
            "name": "bobross16",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "8"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross17",
            "name": "bobross17",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "9"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross18",
            "name": "bobross18",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "10"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross19",
            "name": "bobross19",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "11"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross2",
            "name": "bobross2",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "12"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross20",
            "name": "bobross20",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "13"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross21",
            "name": "bobross21",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "14"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross22",
            "name": "bobross22",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "15"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross23",
            "name": "bobross23",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "16"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross24",
            "name": "bobross24",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "17"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross25",
            "name": "bobross25",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "18"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross26",
            "name": "bobross26",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "19"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross27",
            "name": "bobross27",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "20"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross28",
            "name": "bobross28",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "21"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross29",
            "name": "bobross29",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "22"
        },
        {
          "node": {
            "__typename": "Friend",
            "id": "http://blockchaintp.com/chronicle/ns#agent:bobross3",
            "name": "bobross3",
            "stringAttribute": "String",
            "intAttribute": 1,
            "boolAttribute": false
          },
          "cursor": "23"
        }
      ]
    }
  }
}
