chronicle-domain-test/src/snapshots/chronicle_domain_test__test__quotation.snap
---
source: chronicle-domain-test/src/test.rs
assertion_line: 333
expression: created
---
[data.wasQuotedFrom]
context = 'http://blockchaintp.com/chronicle/ns#entity:generated'
