chronicle-domain-test/src/snapshots/chronicle_domain_test__test__revision-2.snap
---
source: chronicle-domain-test/src/test.rs
assertion_line: 313
expression: derived
---
[data.entityById]
id = 'http://blockchaintp.com/chronicle/ns#entity:generated'
name = 'generated'

[[data.entityById.wasDerivedFrom]]
id = 'http://blockchaintp.com/chronicle/ns#entity:used'

[[data.entityById.wasRevisionOf]]
id = 'http://blockchaintp.com/chronicle/ns#entity:used'
